minikube-configuration/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: ecommerce-user-api
                port:
                  number: 8080
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: ecommerce-product-api
                port:
                  number: 8081
          - path: /shopping
            pathType: Prefix
            backend:
              service:
                name: ecommerce-shopping-api
                port:
                  number: 8082
